# Pattern_Recognition

./: .gitignore  .gitignore.save  CMakeLists.txt  CPPtest_lenSeq_P  CUDAlenSeq  README.md  example-cuda.txt  prova  test.sh  test_nt
PattRec_CUDA/: execution.cu  execution.cuh  idee_per_thrust.txt  iteration.cu  iteration.cuh  macros.h  main.cu  prova  utilities.cuh  utilities.h  varie.cu
PattRec_OMP/: README.md  main.cpp  parallel.cpp  parallel.h  sequential.cpp  sequential.h  utilities.cpp  utilities.h
Result/: CPP_parallel_lv_data_lock_LEN_SEQ.csv  CPP_sequential_LEN_PATTERN_SEQ.csv  CPP_sequential_LEN_SEQ.csv  CUDA_private_LEN_SEQ.csv  default_hyperparmeters.txt  naive.csv  plotting.py  prova.csv  tiling.csv
Result/test-LEN_PATTERN_SEQ/: CPP_parallel_lv_data_LEN_PATTERN_SEQ.csv  CPP_parallel_lv_data_with_lock_LEN_PATTERN_SEQ.csv  CPP_parallel_lv_query_LEN_PATTERN_SEQ.csv
Result/test-LEN_SEQ/: CPP_parallel_lv_data_LEN_SEQ.csv  CUDA_constant_LEN_SEQ.csv  CUDA_naive_LEN_SEQ.csv  CUDA_private_LEN_SEQ.csv  CUDA_tiling_LEN_SEQ.csv
Result/test-LEN_SEQ/old4run/: CPP_parallel_lv_query_LEN_SEQ.csv  old--CUDA_constant_LEN_SEQ.csv  old--CUDA_naive_LEN_SEQ.csv  old--CUDA_tiling_LEN_SEQ.csv
Result/test-NUM_QUERIES/: CPP_parallel_lv_data_NUM_QUERIES.csv  CPP_parallel_lv_data_with_lock_NUM_QUERIES.csv  CPP_parallel_lv_query_NUM_QUERIES.csv  CPP_sequential_NUM_QUERIES.csv
Result/test-n_thread/: CPP_parallel_lv_data_nthreads.csv  CPP_parallel_lv_data_with_lock_nthreads.csv  CPP_parallel_lv_query_nthreads.csv  CPP_sequential_nthreads.csv
test/: CPPtest_lenSeq  CUDAlenQuery  CUDAnumQueries  CUDAthb1024  CUDAthb128  CUDAthb512  CUDAthb64  test.sh
test/CPP-executables/: CPPlenquery  CPPlenseq  CPPnqueries  CPPnthreads
test/CUDA-executables/: CUDAthb256  CUDAthb32  lenpatternseq  lenseq  numqueries  thb1024  thb128  thb256  thb32  thb512  thb64
test/Result/: CUDA_constant_LEN_SEQ.csv  CUDA_constant_threadperblock.csv  CUDA_naive_LEN_PATTERN_SEQ.csv  CUDA_naive_LEN_SEQ.csv  CUDA_private_NUM_QUERIES.csv  CUDA_tiling_LEN_PATTERN_SEQ.csv
test/Result/CPP-LEN_PATTERN_SEQ/: CPP_parallel_lv_data_LEN_PATTERN_SEQ.csv  CPP_parallel_lv_data_with_lock_LEN_PATTERN_SEQ.csv  CPP_parallel_lv_query_LEN_PATTERN_SEQ.csv  CPP_sequential_LEN_PATTERN_SEQ.csv
test/Result/CPP-LEN_SEQ/: CPP_parallel_lv_data_LEN_SEQ.csv  CPP_parallel_lv_data_with_lock_LEN_SEQ.csv  CPP_parallel_lv_query_LEN_SEQ.csv  CPP_sequential_LEN_SEQ.csv
test/Result/CPP-NUM_QUERIES/: CPP_parallel_lv_data_NUM_QUERIES.csv  CPP_parallel_lv_data_with_lock_NUM_QUERIES.csv  CPP_parallel_lv_query_NUM_QUERIES.csv  CPP_sequential_NUM_QUERIES.csv
test/Result/CPP-n_thread/: CPP_parallel_lv_data_nthreads.csv  CPP_parallel_lv_data_with_lock_nthreads.csv  CPP_parallel_lv_query_nthreads.csv
test/Result/CUDA_lenquery/: CUDA_constant_LEN_PATTERN_SEQ.csv  CUDA_naive_LEN_PATTERN_SEQ.csv  CUDA_private_LEN_PATTERN_SEQ.csv  CUDA_tiling_LEN_PATTERN_SEQ.csv
test/Result/CUDA_lenseq/: CUDA_constant_LEN_SEQ.csv  CUDA_naive_LEN_SEQ.csv  CUDA_private_LEN_SEQ.csv  CUDA_tiling_LEN_SEQ.csv
test/Result/CUDA_numqueries/: CUDA_naive_NUM_QUERIES.csv  CUDA_private_NUM_QUERIES.csv  CUDA_tiling_NUM_QUERIES.csv
test/Result/CUDA_threadsperblock/: CUDA_constant_th.csv  CUDA_naive_th.csv  CUDA_naive_threadsperblock.csv  CUDA_private_th.csv  CUDA_private_threadsperblock.csv  CUDA_tiling_th.csv  CUDA_tiling_threadsperblock.csv
